@@ -94,6 +94,7 @@ Engine fixes:
 * Fix camera, parallax layer, and cutscene speeds when using alternative frame limits.
 * Fix not restoring fullscreen option when pressing Cancel or Defaults in config menu.
 * Smoother scrolling in WidgetScrollBox.
+* Fix click-and-drag behavior on WidgetTabControl, WidgetSlider, and WidgetScrollBar.
 
 Game updates:
 
